made some divs a bit bigger to avoid overflowing of text

--- a/index.html/styles.css
+++ b/index.html/styles.css
@@ -156,7 +156,7 @@ div {
   float: right;
   margin-right: 40px;
   text-align: left;
-  width: 270px;
+  width: 310px;
   height: 270px;
 }
 .divlefthalf {
@@ -167,7 +167,7 @@ div {
   margin-left: 40px;
   margin-bottom: 10px;
   text-align: left;
-  width: 270px;
+  width: 310px;
   height: 270px;
 }
 .divcenterresult {
